pkgs/dartcv_core/src/imgproc.h

// Calculates the Laplacian of an image.
// void cv::Laplacian (InputArray src, OutputArray dst, int ddepth, int ksize=1, double scale=1, double delta=0, int borderType=BORDER_DEFAULT)
CvStatus *
Laplacian(Mat src, Mat dst, int dDepth, int kSize, double scale, double delta, int borderType);
// Inverts an affine transformation.
// void cv::invertAffineTransform (InputArray M, OutputArray iM)
CvStatus *InvertAffineTransform(Mat src, Mat dst);
// Calculates the integral of an image.
// void cv::integral (InputArray src, OutputArray sum, int sdepth=-1)
// void cv::integral (InputArray src, OutputArray sum, OutputArray sqsum, int sdepth=-1, int sqdepth=-1)
// void cv::integral (InputArray src, OutputArray sum, OutputArray sqsum, OutputArray tilted, int sdepth=-1, int sqdepth=-1)
CvStatus *Integral(Mat src, Mat sum, Mat sqsum, Mat tilted, int sdepth, int sqdepth);
// Draws a line segment connecting two points.
// void cv::line (InputOutputArray img, Point pt1, Point pt2, const Scalar &color, int thickness=1, int lineType=LINE_8, int shift=0)
CvStatus *Line(Mat img, Point pt1, Point pt2, Scalar color, int thickness, int lineType, int shift);
// Finds lines in a binary image using the standard Hough transform.
// void cv::HoughLines (InputArray image, OutputArray lines, double rho, double theta, int threshold, double srn=0, double stn=0, double min_theta=0, double max_theta=CV_PI)
CvStatus *HoughLines(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta
);
// Finds line segments in a binary image using the probabilistic Hough transform.
// void cv::HoughLinesP (InputArray image, OutputArray lines, double rho, double theta, int threshold, double minLineLength=0, double maxLineGap=0)
CvStatus *HoughLinesP(Mat src, Mat lines, double rho, double theta, int threshold);
CvStatus *HoughLinesPWithParams(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double minLineLength,
    double maxLineGap
);
// Finds lines in a set of points using the standard Hough transform.
// void cv::HoughLinesPointSet (InputArray point, OutputArray lines, int lines_max, int threshold, double min_rho, double max_rho, double rho_step, double min_theta, double max_theta, double theta_step)
CvStatus *HoughLinesPointSet(
    Mat points,
    Mat lines,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step
);