packages/dartcv/lib/src/g/imgproc.g.dart


  late final _HoughCircles_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Double, ffi.Double,
              imp1.CvCallback_1)>>('HoughCircles_Async');
  late final _HoughCircles_Async = _HoughCircles_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HoughLines(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta,
  ) {
    return _HoughLines(
      src,
      lines,
      rho,
      theta,
      threshold,
      srn,
      stn,
      min_theta,
      max_theta,
    );
  }

  late final _HoughLinesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double)>>('HoughLines');
  late final _HoughLines = _HoughLinesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, double, int, double, double, double, double)>();

  ffi.Pointer<CvStatus> HoughLinesP(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
  ) {
    return _HoughLinesP(
      src,
      lines,
      rho,
      theta,
      threshold,
    );
  }

  late final _HoughLinesPPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Double, ffi.Double, ffi.Int)>>('HoughLinesP');
  late final _HoughLinesP = _HoughLinesPPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, double, double, int)>();

  ffi.Pointer<CvStatus> HoughLinesPWithParams(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double minLineLength,
    double maxLineGap,
  ) {
    return _HoughLinesPWithParams(
      src,
      lines,
      rho,
      theta,
      threshold,
      minLineLength,
      maxLineGap,
    );
  }

  late final _HoughLinesPWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double,
              ffi.Int, ffi.Double, ffi.Double)>>('HoughLinesPWithParams');
  late final _HoughLinesPWithParams = _HoughLinesPWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, double, int, double, double)>();

  ffi.Pointer<CvStatus> HoughLinesPWithParams_Async(
    Mat src,
    double rho,
    double theta,
    int threshold,
    double minLineLength,
    double maxLineGap,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughLinesPWithParams_Async(
      src,
      rho,
      theta,
      threshold,
      minLineLength,
      maxLineGap,
      callback,
    );
  }

  late final _HoughLinesPWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              imp1.CvCallback_1)>>('HoughLinesPWithParams_Async');
  late final _HoughLinesPWithParams_Async =
      _HoughLinesPWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, double, double, int, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HoughLinesP_Async(
    Mat src,
    double rho,
    double theta,
    int threshold,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughLinesP_Async(
      src,
      rho,
      theta,
      threshold,
      callback,
    );
  }

  late final _HoughLinesP_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Double, ffi.Double, ffi.Int,
              imp1.CvCallback_1)>>('HoughLinesP_Async');
  late final _HoughLinesP_Async = _HoughLinesP_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, double, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HoughLinesPointSet(
    Mat points,
    Mat lines,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step,
  ) {
    return _HoughLinesPointSet(
      points,
      lines,
      lines_max,
      threshold,
      min_rho,
      max_rho,
      rho_step,
      min_theta,
      max_theta,
      theta_step,
    );
  }

  late final _HoughLinesPointSetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double)>>('HoughLinesPointSet');
  late final _HoughLinesPointSet = _HoughLinesPointSetPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, int, double, double, double,
          double, double, double)>();

  ffi.Pointer<CvStatus> HoughLinesPointSet_Async(
    Mat points,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughLinesPointSet_Async(
      points,
      lines_max,
      threshold,
      min_rho,
      max_rho,
      rho_step,
      min_theta,
      max_theta,
      theta_step,
      callback,
    );
  }

  late final _HoughLinesPointSet_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              imp1.CvCallback_1)>>('HoughLinesPointSet_Async');
  late final _HoughLinesPointSet_Async =
      _HoughLinesPointSet_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, int, int, double, double, double,
              double, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> HoughLines_Async(
    Mat src,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta,
    imp1.CvCallback_1 callback,
  ) {
    return _HoughLines_Async(
      src,
      rho,
      theta,
      threshold,
      srn,
      stn,
      min_theta,
      max_theta,
      callback,
    );
  }

  late final _HoughLines_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              imp1.CvCallback_1)>>('HoughLines_Async');
  late final _HoughLines_Async = _HoughLines_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, double, int, double, double,
          double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Integral(
    Mat src,
    Mat sum,
    Mat sqsum,
    Mat tilted,
    int sdepth,
    int sqdepth,
  ) {
    return _Integral(
      src,
      sum,
      sqsum,
      tilted,
      sdepth,
      sqdepth,
    );
  }

  late final _IntegralPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, ffi.Int, ffi.Int)>>('Integral');
  late final _Integral = _IntegralPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, int, int)>();

  ffi.Pointer<CvStatus> Integral_Async(
    Mat src,
    int sdepth,
    int sqdepth,
    imp1.CvCallback_3 callback,
  ) {
    return _Integral_Async(
      src,
      sdepth,
      sqdepth,
      callback,
    );
  }

  late final _Integral_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, imp1.CvCallback_3)>>('Integral_Async');
  late final _Integral_Async = _Integral_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, imp1.CvCallback_3)>();

  ffi.Pointer<CvStatus> InvertAffineTransform(
    Mat src,
    Mat dst,
  ) {
    return _InvertAffineTransform(
      src,
      dst,
    );
  }

  late final _InvertAffineTransformPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'InvertAffineTransform');
  late final _InvertAffineTransform = _InvertAffineTransformPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> InvertAffineTransform_Async(
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _InvertAffineTransform_Async(
      src,
      callback,
    );
  }

  late final _InvertAffineTransform_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, imp1.CvCallback_1)>>('InvertAffineTransform_Async');
  late final _InvertAffineTransform_Async = _InvertAffineTransform_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Laplacian(
    Mat src,
    Mat dst,
    int dDepth,
    int kSize,
    double scale,
    double delta,
    int borderType,
  ) {
    return _Laplacian(
      src,
      dst,
      dDepth,
      kSize,
      scale,
      delta,
      borderType,
    );
  }

  late final _LaplacianPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Double,
              ffi.Double, ffi.Int)>>('Laplacian');
  late final _Laplacian = _LaplacianPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, int, double, double, int)>();

  ffi.Pointer<CvStatus> Laplacian_Async(
    Mat src,
    int dDepth,
    int kSize,
    double scale,
    double delta,
    int borderType,
    imp1.CvCallback_1 callback,
  ) {
    return _Laplacian_Async(
      src,
      dDepth,
      kSize,
      scale,
      delta,
      borderType,
      callback,
    );
  }

  late final _Laplacian_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Double,
              ffi.Double, ffi.Int, imp1.CvCallback_1)>>('Laplacian_Async');
  late final _Laplacian_Async = _Laplacian_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, double, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Line(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
  ) {
    return _Line(
      img,
      pt1,
      pt2,
      color,
      thickness,
      lineType,
      shift,
    );
  }

  late final _LinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, ffi.Int,
              ffi.Int, ffi.Int)>>('Line');
  late final _Line = _LinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, CvPoint, Scalar, int, int, int)>();

  ffi.Pointer<CvStatus> Line_Async(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    imp1.CvCallback_0 callback,
  ) {
    return _Line_Async(
      img,
      pt1,
      pt2,
      color,
      thickness,
      lineType,
      shift,
      callback,
    );
  }

  late final _Line_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, ffi.Int,
              ffi.Int, ffi.Int, imp1.CvCallback_0)>>('Line_Async');
  late final _Line_Async = _Line_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, CvPoint, Scalar, int, int, int, imp1.CvCallback_0)>();
